fixed linux inappbrowser event handling on dart side

--- a/flutter_inappwebview_linux/linux/CMakeLists.txt
+++ b/flutter_inappwebview_linux/linux/CMakeLists.txt
@@ -120,6 +120,7 @@ message(STATUS "flutter_inappwebview_linux: nlohmann/json ${NLOHMANN_JSON_VERSIO
 # Plugin source files
 list(APPEND PLUGIN_SOURCES
   "flutter_inappwebview_linux_plugin.cc"
+  "plugin_instance.cc"
   "cookie_manager.cc"
   "credential_database.cc"
   "proxy_manager.cc"
