--- a/flutter_inappwebview_linux/linux/CMakeLists.txt
+++ b/flutter_inappwebview_linux/linux/CMakeLists.txt
@@ -174,6 +174,7 @@ list(APPEND PLUGIN_SOURCES
   "cookie_manager.cc"
   "credential_database.cc"
   "proxy_manager.cc"
+  "utils/software_rendering.cc"
   "web_storage_manager.cc"
   "webview_environment.cc"
   "content_blocker/content_blocker_handler.cc"
