--- a/flutter_inappwebview/example/pubspec.yaml
+++ b/flutter_inappwebview/example/pubspec.yaml
@@ -27,6 +27,9 @@ dependencies:
   permission_handler: 11.3.1
   url_launcher: 6.3.0
   pointer_interceptor: ^0.10.1+2
+  shared_preferences: ^2.2.2
+  provider: ^6.1.1
+  intl: ^0.18.1
   # mime: ^1.0.4
   # connectivity: ^0.4.5+6
   flutter_inappwebview:
