--- a/flutter_inappwebview/example/pubspec.yaml
+++ b/flutter_inappwebview/example/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   shared_preferences: ^2.2.2
   provider: ^6.1.1
   intl: ^0.18.1
+  file_picker: ^6.1.1
   # mime: ^1.0.4
   # connectivity: ^0.4.5+6
   flutter_inappwebview:
