added web notification controller support

--- a/flutter_inappwebview_windows/windows/CMakeLists.txt
+++ b/flutter_inappwebview_windows/windows/CMakeLists.txt
@@ -140,7 +140,7 @@ list(APPEND PLUGIN_SOURCES
   "types/launching_external_uri_scheme_request.h"
   "types/launching_external_uri_scheme_response.cpp"
   "types/launching_external_uri_scheme_response.h"
-  "types/notification_direction.h"
+  "types/text_direction_kind.h"
   "types/notification_received_request.cpp"
   "types/notification_received_request.h"
   "types/notification_received_response.cpp"
@@ -191,6 +191,10 @@ list(APPEND PLUGIN_SOURCES
   "find_interaction/find_interaction_channel_delegate.h"
   "find_interaction/find_interaction_controller.cpp"
   "find_interaction/find_interaction_controller.h"
+  "web_notification/web_notification_channel_delegate.cpp"
+  "web_notification/web_notification_channel_delegate.h"
+  "web_notification/web_notification_controller.cpp"
+  "web_notification/web_notification_controller.h"
   "web_message/web_message_channel.cpp"
   "web_message/web_message_channel.h"
   "web_message/web_message_listener.cpp"
