--- a/flutter_inappwebview/example/android/app/build.gradle
+++ b/flutter_inappwebview/example/android/app/build.gradle
@@ -23,15 +23,15 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace 'com.pichillilorenzo.flutterwebviewexample'
+    namespace 'com.pichillilorenzo.flutter_inappwebviewexample'
 
     compileOptions {
-        sourceCompatibility 1.8
-        targetCompatibility 1.8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
-    compileSdk 36
-    ndkVersion = "28.2.13676358"
+    compileSdkVersion flutter.compileSdkVersion
+    ndkVersion flutter.ndkVersion
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
@@ -55,7 +55,7 @@ android {
             signingConfig signingConfigs.debug
         }
     }
-    namespace 'com.pichillilorenzo.flutterwebviewexample'
+    
     lint {
         disable 'InvalidPackage'
     }
