--- a/flutter_inappwebview_macos/pubspec.yaml
+++ b/flutter_inappwebview_macos/pubspec.yaml
@@ -20,8 +20,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview_platform_interface: #^1.4.0-beta.3
-    path: ../flutter_inappwebview_platform_interface
+  flutter_inappwebview_platform_interface: ^1.4.0-beta.3
+    # path: ../flutter_inappwebview_platform_interface
 
 dev_dependencies:
   flutter_test:
